--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ layout: default
       >{{ post.date | date: "%m.%d" }}</span
     >
     <a href="{{ post.url | relative_url }}" class="archive-title fs-4"
-      >{{ post.title }}</a
+      >{% if post.tags contains "featured" %}⭐{% endif %}
+	  {{ post.title }}</a
     >
   </div>
   {% endfor %}
