--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<div class="alert alert-warning" role="alert">heyy:) this site is functional, but i'm still working on getting everything just right before it's officially ready! 💖</div>
 <div class="hero">
 {% for post in site.posts limit:1 %}
   <a href="{{ post.url | relative_url }}" class="archive-title fs-4">
