unpublished page, taglines, hero img size
-added tagline, appended ?ver to taglines.js call in index to force file refresh
-tagline font size reduced
-fixed hero image sizing for smaller screens

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<script src="{{site.baseurl}}/assets/js/taglines.js"></script>
+<script src="{{site.baseurl}}/assets/js/taglines.js?10"></script>
 
 <div class="taglines fadeIn"><script>document.write(r)</script></div>
 
